--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,45 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="savannahchrisroy.demo" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.AnimationActivity"
+            android:label="@string/title_activity_animation" >
+        </activity>
+        <activity
+            android:name=".activities.CameraActivity"
+            android:label="@string/title_activity_camera" >
+        </activity>
+        <activity
+            android:name=".activities.WebActivity"
+            android:label="@string/title_activity_web" >
+        </activity>
+        <activity
+            android:name=".activities.MusicActivity"
+            android:label="@string/title_activity_music" >
+        </activity>
+        <activity
+            android:name=".activities.InformationPassingActivity"
+            android:label="@string/title_activity_information_passing" >
+        </activity>
+        <activity
+            android:name=".activities.ResultActivity"
+            android:label="@string/title_activity_result" >
         </activity>
     </application>
 
